# custom-reth-chain

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Remaining.md
Docker/: docker-compose.yml
md/: Architecture.md  EVM-Design.md  GEVM-Comparison.md  Implementation.md  Remaining.md  USAGE.md  main.md
scoutup-go-explorer/blockscout/embed/: common-blockscout.env  common-frontend.env  docker-compose.yml
src/: chainspec.rs  cli.rs  consensus.rs  genesis.rs  main.rs  node.rs  output.rs  payload.rs  rpc.rs  signer.rs
src/bytecodes/: chain_config.hex  entrypoint_v07.hex  safe_fallback_handler.hex  safe_multisend.hex  signer_registry.hex  simple_account_factory.hex  treasury.hex
src/cache/: mod.rs
src/chainspec/: mod.rs
src/consensus/: mod.rs
src/evm/: bench.rs  mod.rs  parallel.rs
src/genesis/: contracts.rs  governance.rs  mod.rs
src/keystore/: mod.rs
src/metrics/: mod.rs
src/node/: mod.rs
src/onchain/: helpers.rs  mod.rs  readers.rs  selectors.rs  slots.rs
src/payload/: builder.rs  mod.rs
src/rpc/: admin.rs  clique.rs  mod.rs
src/signer/: dev.rs  manager.rs  mod.rs  sealer.rs
src/statediff/: mod.rs
